# better.finder

./: CHANGELOG.md  DISTRIBUTION_SUMMARY.md  E2E_TEST_RESULTS.md  INSTALLATION.md  LICENSE  PERFORMANCE_TEST_RESULTS.md  PROJECT_SETUP.md  README.md  RELEASE_CHECKLIST.md  TASK_23_COMPLETION_SUMMARY.md  TESTING.md  TEST_CHECKLIST.md  TROUBLESHOOTING.md  package-lock.json  package.json  tailwind.config.js  update-manifest.json.example
scripts/: build-installer.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autostart.rs  error.rs  hotkey.rs  lib.rs  main.rs  settings.rs  tray.rs  types.rs  updater.rs
src-tauri/src/search/: cache.rs  engine.rs  engine_test.rs  mod.rs  performance_bench.rs  provider.rs
src-tauri/src/search/providers/: app_search.rs  bookmark.rs  calculator.rs  clipboard.rs  everything.rs  fallback_test.rs  file_search.rs  mod.rs  quick_action.rs  recent_files.rs  web_search.rs  windows_search.rs
src-tauri/src/utils/: icon_cache.rs  logging.rs  mod.rs  notification.rs  theme.rs  theme_test.rs  validation.rs
src-tauri/tests/: hotkey_tests.rs
src/components/: ResultGroup.test.tsx  ResultGroup.tsx  ResultItem.test.tsx  ResultItem.tsx  ResultSkeleton.tsx  SearchBar.test.tsx  SearchBar.tsx  Settings.test.tsx  Settings.tsx  Toast.test.tsx  Toast.tsx  ToastContainer.tsx  UpdateNotification.tsx
src/hooks/: useKeyboard.test.tsx  useKeyboard.ts  useSearch.ts  useTheme.test.tsx  useTheme.ts  useToast.test.tsx  useToast.ts  useUpdater.ts  useWindowVisibility.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: highlight.test.tsx  highlight.tsx
