[package]
name = "better-finder"
version = "0.1.0"
description = "Fast global search launcher for Windows - Search files, apps, bookmarks, and more with Ctrl+K"
authors = ["Global Search Launcher"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/yourusername/global-search-launcher"
repository = "https://github.com/yourusername/global-search-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "better_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
urlencoding = "2.1"
lru = "0.12"
meval = "0.2"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
] }
windows-core = "0.58"

